Show meaningful title for search key not found infobox, fdo#59865

Change-Id: I5c99fc98552be705ddcb163320521620bdcbf7ef